--- a/Style.css
+++ b/Style.css
@@ -1,1 +1,138 @@
 div { border: 1px solid red; } 
+
+body {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+header {
+    background-color: #1f2937;
+}
+
+.logo {
+    font-size: 24px;
+    color: #f9faf8;
+    font-weight: 900;
+}
+
+.header-content{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-size: 18px;
+    color: #e5e7eb;
+    margin: 0 auto;
+    max-width: 1100px;
+    padding: 0 24px;
+}
+
+.header-content ul {
+    display: flex;
+    gap: 24px;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+.hero {
+    background-color: #1f2937;
+    padding: 96px 0;
+}
+
+.hero-content{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 0 auto;
+    max-width: 1100px;
+    padding: 0 24px;
+}
+
+.hero-content h1{
+    font-size: 48px;
+    color: #f9faf8;
+    font-weight: 900;
+    margin: 0;
+    max-width: 600px;
+
+}
+.hero-text p {
+    font-size: 18px;
+    color: #e5e7eb;
+    max-width: 450px;
+    margin: 0;
+    
+}
+
+.hero-image{
+    width: 450px;
+    height: 250px;
+    background-color: grey;
+}
+
+.hero-image img{
+    object-fit: contain;
+    width: 100%;
+    height: 100%;
+    color: #f9faf8;
+}
+
+.signup-button {
+  background-color: #3882f6;
+  border: 1px solid transparent;
+  border-radius: 3px;
+  color: #fff;
+  cursor: pointer;
+  font-size: 13px;
+  font-weight: 400;
+  margin: 0;
+  padding: 8px 18px;
+  text-align: center;
+}
+
+.random-information {
+    padding: 96px 0;
+
+}
+
+.info-content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 0 auto;
+    max-width: 1100px;
+    padding: 0 24px;
+    font-size: 36px;
+    color: #1f2937;
+    font-weight: 900;
+
+}
+
+.card-container {
+    display: flex;
+    justify-content: center;
+    gap: 48px;
+
+}
+
+.card img {
+  width: 150px;
+  height: 150px;
+  border: 3px solid #3882f6;
+  border-radius: 12px;
+  object-fit: cover;
+}
+
+.card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 12px;
+  max-width: 160px;
+}
+
+.card p {
+  text-align: center;
+  font-size: 14px;
+  color: #e5e7eb;
+  margin: 0;
+}
